--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,33 @@ body{
     height: 200px;
     width: 550px;
     background: transparent;
-    border-radius: 3px;
+    border-radius: 10px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.5);
 
 
 }
 
-.tempo{
+.relogio div{
+    height: 170px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(5, 5, 5, .9);
+    box-shadow: 5px 5 px 15px rgba(0, 0, 0, .7);
+    border-radius: 10px;
+
+}
+
+.relogio span{
+    font-weight: bolder;
+    font-size: 60px;
+
+}
+
+.relogio span.tempo{
+    font-size: 10px;
 
 }
