--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body{
     height: 100vh;
-    background: linear-gradient(120deg, #ffe53bd8, #ff2525da);
+    background: linear-gradient(350deg, #4dffff, #6cb4d8, #566673 );
     display: flex;
     align-items: center;
     justify-content: center;
